--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
+    "recharts": "^3.2.1",
     "sweetalert2": "^11.22.5"
   },
   "devDependencies": {
